M0-2: 配置系统与环境分层 (vibe-kanban 6e3c37cb)
建立 YAML 配置目录与环境变量管理体系

**关键交付**：
- backend/config/ 目录与配置文件
- Settings 与 YAML 合并策略实现（YAML > env > default）
- 配置 schema 校验（启动时强校验）
- 缺失必需密钥时明确报错

**验收标准**：
- 启动时输出配置版本与关键开关（脱敏）
- 缺少密钥时失败且错误可读
- 环境分层生效（测试/预发/生产）

**前置任务**：M0-1 完成

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,40 +1,88 @@
+# ============================================================================
 # Application Settings
+# ============================================================================
 APP_NAME=CozyEngine
 APP_ENV=development
 DEBUG=true
 LOG_LEVEL=INFO
 
+# ============================================================================
 # Server Configuration
+# ============================================================================
 HOST=0.0.0.0
 PORT=8000
 RELOAD=true
 
-# Database
+# CORS (comma-separated list of origins)
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000
+
+# ============================================================================
+# Security & Secrets (REQUIRED in production)
+# ============================================================================
+SECRET_KEY=your-secret-key-change-in-production-min-32-chars
+JWT_SECRET_KEY=your-jwt-secret-key-change-in-production
+
+# ============================================================================
+# Database (REQUIRED in staging/production)
+# ============================================================================
 DATABASE_URL=postgresql://user:password@localhost:5432/cozyengine
 DATABASE_POOL_SIZE=10
 DATABASE_MAX_OVERFLOW=20
 
-# Redis
+# ============================================================================
+# Redis (Optional, but recommended)
+# ============================================================================
 REDIS_URL=redis://localhost:6379/0
 REDIS_MAX_CONNECTIONS=50
+
+# ============================================================================
+# AI Providers (At least ONE required)
+# ============================================================================
 
 # OpenAI
 OPENAI_API_KEY=sk-your-api-key-here
 OPENAI_ORG_ID=
+OPENAI_BASE_URL=
 
 # Anthropic
 ANTHROPIC_API_KEY=sk-ant-your-api-key-here
+ANTHROPIC_BASE_URL=
 
-# Observability
+# Ollama (for local models)
+OLLAMA_BASE_URL=http://localhost:11434
+
+# ============================================================================
+# Personalization Engines (Optional)
+# ============================================================================
+
+# Cognee (Knowledge Engine)
+COGNEE_API_URL=
+COGNEE_API_TOKEN=
+
+# Memobase (Knowledge Engine alternative)
+MEMOBASE_PROJECT_URL=
+MEMOBASE_API_KEY=
+
+# Mem0 (Chat Memory Engine)
+MEM0_API_URL=
+MEM0_API_KEY=
+
+# ============================================================================
+# Observability (Optional)
+# ============================================================================
+
+# OpenTelemetry
 OTEL_ENABLED=false
 OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
 OTEL_SERVICE_NAME=cozyengine
 
-# Security
-SECRET_KEY=your-secret-key-change-in-production
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000
+# Sentry
+SENTRY_DSN=
+SENTRY_ENABLED=false
+SENTRY_ENVIRONMENT=development
 
+# ============================================================================
 # Feature Flags
+# ============================================================================
 ENABLE_METRICS=true
 ENABLE_TRACING=false
