--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "pyyaml>=6.0.0",
     "httpx>=0.27.0",
     "sqlalchemy>=2.0.0",
+    "alembic>=1.13.0",
+    "asyncpg>=0.29.0",
     "redis>=5.0.0",
     "opentelemetry-api>=1.27.0",
     "opentelemetry-sdk>=1.27.0",
