feat: 添加 OpenAI Base URL 自定义配置支持
变更说明:
- 在编排器中添加 _get_base_url() 方法
- 修改 get_or_create 调用，同时传递 api_key 和 base_url
- 支持通过 OPENAI_BASE_URL 环境变量配置自定义端点
- 默认值为官方 API: https://api.openai.com/v1
- 可用于配置代理、中转或兼容的 API 服务

已测试:
- 使用自定义 Base URL 成功调用 API
- 返回正常响应，功能验证通过

配置方式:
export OPENAI_API_KEY='your-api-key'
export OPENAI_BASE_URL='https://your-proxy.com/v1'  # 可选

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -42,6 +42,10 @@ REDIS_MAX_CONNECTIONS=50
 # OpenAI
 OPENAI_API_KEY=sk-your-api-key-here
 OPENAI_ORG_ID=
+# OPENAI_BASE_URL: 自定义 OpenAI API 端点 (可选)
+# 默认值: https://api.openai.com/v1
+# 用于代理、中转或兼容的 API 服务
+# 示例: https://your-proxy.com/v1
 OPENAI_BASE_URL=
 
 # Anthropic
