fix: complete pre-M3 tasks and tracking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
         "--mcp"
       ]
     }
+  },
+  "chat.tools.terminal.autoApprove": {
+    "git -C /config/CozyProjects/CozyEngine": true
   }
 }
