feat(M4-1): Implement STT and TTS Engines
- Added Voice engines interfaces (STT/TTS)
- Implemented OpenAI STT (Whisper) and TTS (Speech) engines
- Added voice configuration to engines.yaml
- Updated EngineRegistry to support lazy creation of voice engines
- Added /api/v1/audio/transcriptions and /api/v1/audio/speech endpoints
- Wired voice router in main.py

--- a/backend/config/engines.yaml
+++ b/backend/config/engines.yaml
@@ -57,3 +57,22 @@ engines:
     enabled: true
     timeout: 30.0
     max_iterations: 5
+
+  # Voice Engines (M4)
+  voice:
+    stt:
+      enabled: true
+      default_provider: "openai"
+      providers:
+        openai:
+          model: "whisper-1"
+          timeout: 10.0
+    tts:
+      enabled: true
+      default_provider: "openai"
+      providers:
+        openai:
+          model: "tts-1"
+          voice: "alloy"
+          response_format: "mp3"
+          timeout: 10.0
