--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,10 @@ dependencies = [
     "opentelemetry-api>=1.27.0",
     "opentelemetry-sdk>=1.27.0",
     "structlog>=24.4.0",
+    "fastrtc>=0.1.0",
+    "gradio>=5.0.0",
+    "numpy>=1.24.0",
+    "scipy>=1.10.0",
 ]
 
 [project.optional-dependencies]
