--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pydantic>=2.9.0",
     "pydantic-settings>=2.5.0",
     "python-dotenv>=1.0.0",
+    "python-multipart>=0.0.12",
     "pyyaml>=6.0.0",
     "httpx>=0.27.0",
     "sqlalchemy>=2.0.0",
