--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -36,6 +36,8 @@ dev = [
     "ruff>=0.7.0",
     "pyright>=1.1.390",
     "httpx>=0.27.0",
+    "locust>=2.20.0",
+    "aiosqlite>=0.20.0",
 ]
 
 [build-system]
